--- a/assets/www/media/css/style/chat.less
+++ b/assets/www/media/css/style/chat.less
@@ -53,6 +53,11 @@
     .fragment {
         padding: 2px;
     }
+    .text {
+        img {
+            max-width: 100%;
+        }
+    }
     &.own {
         .avatar {
             right: 0;
